[project]
name = "analysis-agent-0416"
version = "0.1.0"
description = "Standalone Python analysis agent for hypothesis testing and predictive modeling"
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai>=2.1.12",
    "langsmith>=0.4.0",
    "langgraph>=0.6.11",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_agent"]
